# KalshiPredictionMarket

./: .env.example  .gitignore  CODE_EXPLANATION.md  EXECUTOR_AND_DRY_RUN_EXPLAINED.md  GO_LIVE_PLAN.md  HANDOFF_2026-02-24.md  LICENSE  LIVE_AUTONOMOUS_V1_GAP_LIST.md  MARKET_INTELLIGENCE_PIPELINE.md  Makefile  NABIOS_MINIMUM_SUBSTRATE_SCAFFOLDING_SPEC.md  OPERATIONS.md  PLATFORM_REFACTOR.md  README.md  REFACTORING_COMPLETE.md  SKILL.md  Sprint1Plan.md  TECHNICAL_DOCS.md  USAGE_EXAMPLES.md  V1_AUTONOMOUS_LIVE_CODE_PLAN.md  advanced_config.template.json  analyze_report.py  check_trending.py  pyproject.toml  requirements.txt  restore_db.sh
app/: __main__.py  bot.py  config.py
backups/: kalshi_20260218_061046.sqlite
context/: injury_llm_cache_feed.json  injury_llm_cache_profiles.json  llm_context.example.json  llm_context.json
main/: QUICK_REFERENCE.md  SKILL.md  SKILL_INSTALLATION_GUIDE.md  Sprint1Plan.md  ai_trading_bot.py  ai_trading_bot_refactored.py  series_scanner.py
nabi-curator/: calibrate_regime_thresholds.py  curator_adapters.py  event_boundary.py  feature_authority_daemon.py  market_reflex_daemon.py  market_signal_curator.py
nabi-demos/: adapter.ts  capture.ts  judgment-schema.json  metrics-exporter.ts  portfolio.ts  schema.json  signal-engine.ts
scripts/: generate_historical_elo_matchups.py  kalshi_user_details.py  nba_tomorrow_injuries.sh  run_tonight_nba_dry_run.py  walkback_nba_matchup_analysis.py
tests/: test_analysis_reasoning_db.py  test_bankroll_manager.py  test_decision_engine.py  test_dry_run_analysis_table.py  test_duplicate_guard.py  (+11 more)
(+62 files in other folders)
